# openapi/accounts_mgmt/v1/openapi.json
@@ -541,6 +541,85 @@
         }
       }
     },
+    "/api/accounts_mgmt/v1/cloud_resources": {
+      "get": {
+        "description": "Retrieves the list of cloud resources.",
+        "parameters": [
+          {
+            "name": "page",
+            "description": "Index of the requested page, where one corresponds to the first page.",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          },
+          {
+            "name": "search",
+            "description": "Search criteria.\n\nThe syntax of this parameter is similar to the syntax of the _where_ clause\nof an SQL statement, but using the names of the attributes of the cloud resource\ninstead of the names of the columns of a table.\n\nIf the parameter isn't provided, or if the value is empty, then all the\nitems that the user has permission to see will be returned.",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "size",
+            "description": "Maximum number of items that will be contained in the returned page.",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "items": {
+                      "description": "Retrieved list of cloud resources.",
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/CloudResource"
+                      }
+                    },
+                    "page": {
+                      "description": "Index of the requested page, where one corresponds to the first page.",
+                      "type": "integer",
+                      "format": "int32"
+                    },
+                    "size": {
+                      "description": "Maximum number of items that will be contained in the returned page.",
+                      "type": "integer",
+                      "format": "int32"
+                    },
+                    "total": {
+                      "description": "Total number of items of the collection that match the search criteria,\nregardless of the size of the page.",
+                      "type": "integer",
+                      "format": "int32"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "default": {
+            "description": "Error.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/accounts_mgmt/v1/cluster_authorizations": {
       "post": {
         "description": "Authorizes new cluster creation against an existing subscription.",
@@ -4488,6 +4567,65 @@
           "value": {
             "description": "Value that can be assigned to the capability (eg. \"true\", \"false\" etc).",
             "type": "string"
+          }
+        }
+      },
+      "CloudResource": {
+        "properties": {
+          "kind": {
+            "description": "Indicates the type of this object. Will be 'CloudResource' if this is a complete object or 'CloudResourceLink' if it is just a link.",
+            "type": "string"
+          },
+          "id": {
+            "description": "Unique identifier of the object.",
+            "type": "string"
+          },
+          "href": {
+            "description": "Self link.",
+            "type": "string"
+          },
+          "active": {
+            "type": "boolean"
+          },
+          "category": {
+            "type": "string"
+          },
+          "category_pretty": {
+            "type": "string"
+          },
+          "cloud_provider": {
+            "type": "string"
+          },
+          "cpu_cores": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "generic_name": {
+            "type": "string"
+          },
+          "memory": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "memory_pretty": {
+            "type": "string"
+          },
+          "name_pretty": {
+            "type": "string"
+          },
+          "resource_type": {
+            "type": "string"
+          },
+          "size_pretty": {
+            "type": "string"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
           }
         }
       },
